--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
     height:81vh;
 }
 .btnpast{
-    margin:10px;
+    margin:2vh;
     height:60vh;
     width:45vw;
     border:5px solid #731817;
